# optical_raytrace_cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_release.py  config.json  optical_raytrace.desktop  optical_raytrace.spec  run_ui.sh
.github/workflows/: release.yml
checkout/: zemax_reference_76.txt
examples/: example_doublet_finite.json  example_doublet_infinity.json  test_finite.json  test_infinity.json
include/: Aberrations.hpp  IOUtils.hpp  MathUtils.hpp  Models.hpp  Paraxial.hpp  RayGenerator.hpp  RayTrace.hpp  RayTrace3D.hpp
src/: Aberrations.cpp  IOUtils.cpp  MathUtils.cpp  Paraxial.cpp  RayGenerator.cpp  RayTrace.cpp  RayTrace3D.cpp  main.cpp
ui/: server.py
ui/templates/: index.html
